modified dwl.service and brightness hook for gammastep

--- a/systemd/user/dwl.service
+++ b/systemd/user/dwl.service
@@ -3,7 +3,7 @@ Description=dwl after login daemon
 After=getty.target
 
 [Service]
-ExecStart=%h/bin/dwl
+ExecStart=%h/.local/bin/dwl
 
 [Install]
 WantedBy=default.target
